# meta-springs

./: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml  stack.yaml
app/: Main.hs
bench/: Main.hs
gc-rust/: Cargo.toml  README.md  VALIDATION.md
gc-rust/examples/: SPRING_MC_REPORT.html  bivariate_nma.rs  capscale_maxflow.rs  cycle_basis_gd.rs  cycle_basis_hmc.rs  cycle_hybrid.rs  debug_stream.rs  draw_3comm_spring_network.py  em_maxflow.rs  em_maxflow_capscale.rs  em_maxflow_image.rs  fw_maxflow.rs  gc_maxflow.rs  gc_maxflow_image.rs  mc_lp_oracle.py  mc_lp_oracle_cbc.py  mc_lp_oracle_glpk.py  mc_lp_oracle_gurobi.py  mc_maxflow.rs  mc_path_lp.py  mc_via_multivariate.rs  sampling_flow.rs  sampling_flow_mc.rs  sampling_maxflow.rs  spring_hmc_mc.rs  spring_ipm_maxflow.rs  spring_joint_lp_mc.rs  spring_joint_mc.rs  spring_lpipm_mc.rs  spring_lpipm_vs_ortools.rs  spring_metropolis_mc.rs  spring_multiaxis_mc.rs  spring_multiaxis_verify.rs  spring_mwu_mc.rs  spring_newton_mc.rs  spring_pgd_mc.rs  spring_pn_mc.rs  spring_pn_mc_decoupled.rs  spring_pn_mc_full.rs  spring_pn_mc_image.rs  (+4 more)
gc-rust/src/: contribution.rs  data.rs  gc.rs  lib.rs  main.rs  nma_iv.rs  output.rs  solver.rs  solver_cont.rs
gc-rust/src/lap_solver/: amg.rs  csr.rs  mod.rs  pcg.rs  precond.rs
paper/: .gitignore  grand_canonical_xi.bbl  grand_canonical_xi.css  grand_canonical_xi.tex  nmadb_table.tex  references.bib  sspi-nma.bbl  sspi-nma.tex  xi_animation.html
test/: .json  .~lock.continuouslong.csv#  4arm.csv  BayesmetaCompare.hs  Fallers.csv  Spec.hs  bayesian_comparison.R  binary.csv  (+181 more)
(+11255 files in other folders)
