[package]
name = "gc-rust"
version = "0.1.0"
edition = "2021"
description = "Rust port of the binomial Grand Canonical NMA pipeline"

[[bin]]
name = "gc-rust"
path = "src/main.rs"

[lib]
name = "gc_rust"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.33"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
